--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   },
   "homepage": "https://github.com/Victor0am/MiniSense#readme",
   "devDependencies": {
-    "@types/knex": "^0.16.1",
     "tslint": "^6.1.3",
     "typescript": "^4.3.2"
   },
@@ -31,6 +30,7 @@
     "express": "^4.17.1",
     "knex": "^0.95.6",
     "path": "^0.12.7",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "ts-node": "^10.0.0"
   }
 }
